--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,68 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 80%;
+  justify-content: space-evenly;
+  min-height: 80vh;
+  
 }
 
-.App-link {
-  color: #61dafb;
+#button-container {
+  display:flex;
+  width: 100%;
+  justify-content: space-between;
+  align-self: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#textarea {
+  display:flex;
+  flex-direction: column;
+  width: 100%;
+} 
+
+button {
+  height: 8em;
+  width: 8em;
+	border-radius:3px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-size:15px;
+	padding:9px 23px;
+	text-decoration:none;
+}
+
+#happy { 
+	box-shadow:inset 0px -3px 7px 0px #34e251;
+	background:linear-gradient(to bottom, #34e251 5%, #2db744 100%);
+	background-color:#34e251;
+	border:1px solid #0b0e07;
+}
+
+#confused { 
+	box-shadow:inset 0px -3px 7px 0px #eef204;
+  background:linear-gradient(to bottom, #eef204 5%, #dadd00 100%); 
+	background-color:#eef204;
+	border:1px solid #0b0e07;
+}
+
+
+
+
+.submit {
+  align-self: center;
+  height: 4em;
+  width: 8em;
+	box-shadow:inset 0px -3px 7px 0px #29bbff;
+	background:linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+	background-color:#2dabf9;
+	border-radius:3px;
+	border:1px solid #0b0e07;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-size:15px;
+	padding:9px 23px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #263666;
 }
