--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,18 @@
+body {
+  font-family: "Rubik", sans-serif;
+}
+h1 {
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+#root {
+  background: grey;
+}
+
 .App {
+  padding-top: 1em;
+  background: white;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -8,72 +22,125 @@
   cursor: pointer;
 }
 
-#textarea {
+.thanks {
+  text-align: center;
+  font-size: 5vw;
+}
+
+.error {
+  color: red;
+}
+
+#thoughts {
   display: flex;
   flex-direction: column;
+}
+
+.row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+  margin: 1em 0em;
+  /* border-bottom: 1px solid black;
+  border-top: 1px solid black; */
+}
+
+.row span {
+  font-size: 1.2em;
+  margin: 0.2em 0em;
+}
+
+hr {
   width: 100%;
 }
 
-#button-container {
+label {
+  align-self: flex-start;
+  margin-bottom: 0.5em;
+}
+
+.container {
   display: flex;
+  width: 100%;
   justify-content: space-between;
-  align-self: center;
+  padding: 30px 0px;
+  /* border-bottom: 1px solid black;
+  border-top: 1px solid black; */
+}
+
+.selected {
+  border: 2px solid black;
+  border-radius: 50%;
 }
 
 button {
-  height: 8em;
-  width: 8em;
-  border-radius: 3px;
-  display: inline-block;
-  cursor: pointer;
-  color: #ffffff;
-  font-size: 15px;
-  padding: 9px 23px;
-  text-decoration: none;
-}
-
-.submit {
-  align-self: center;
-  height: 4em;
-  width: 8em;
-  box-shadow: inset 0px -3px 7px 0px #29bbff;
-  background: linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
-  background-color: #2dabf9;
+  min-height: 4vh;
+  min-width: 15vh;
+  align-self: flex-end;
+  background-color: black;
   border-radius: 3px;
   border: 1px solid #0b0e07;
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
-  font-size: 15px;
+  font-size: 2vh;
   padding: 9px 23px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #263666;
 }
 
-@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
-  /* .App {
-    width: 80%;
-    min-height: 80vh;
-  }
-  #button-container {
-    width: 100%;
-  } */
+#happy-btn {
+  color: #14a76c;
+}
+#confused-btn {
+  color: #ffe400;
+}
+#sad-btn {
+  color: #ff652f;
 }
 
-/* ----------- Retina Screens ----------- */
-@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
-  /* .App {
-    width: 80%;
-    min-height: 80vh;
+@media screen and (min-device-width: 1200px) {
+  .App {
+    width: 60%;
+    min-height: 100vh;
   }
-  #button-container {
+  .row {
+    width: 75%;
+  }
+
+  #thoughts {
+    width: 50%;
+    align-self: center;
+  }
+  textarea {
+    height: 10em;
     width: 100%;
-  } */
+    resize: none;
+  }
+  .svg-inline--fa {
+    font-size: 6vw;
+  }
 }
 
 /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
 /* Portrait */
-@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+@media (max-device-width: 1200px) {
+  .svg-inline--fa {
+    font-size: 20vw;
+  }
+  textarea {
+    height: 10em;
+    width: 100%;
+    resize: none;
+  }
+  .App {
+    width: 100%;
+    min-height: 80vh;
+  }
+  .row {
+    width: 90%;
+  }
 }
 
 /* ----------- iPhone X ----------- */
