--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,49 @@
+body {
+  font-size: 4em;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
 .App {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
 
+#happy {
+  color: #14a76c;
+  text-align: center;
+}
+.error {
+  font-size: 0.5em;
+  color: red;
+}
+
 .icon-wrapper {
   cursor: pointer;
 }
-
-#textarea {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+.svg-inline--fa {
+  font-size: 10vw;
 }
-
-#button-container {
-  display: flex;
-  justify-content: space-between;
-  align-self: center;
-}
-
 button {
-  height: 8em;
-  width: 8em;
+  height: 100px;
+  align-self: center;
+  width: 250px;
+  margin-bottom: 10px;
+  background-color: black;
   border-radius: 3px;
+  border: 1px solid #0b0e07;
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
-  font-size: 15px;
+  font-size: 1em;
   padding: 9px 23px;
   text-decoration: none;
+  text-shadow: 0px 1px 0px #263666;
 }
 
 .submit {
